home-cluster/clustersecret/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clustersecret
  labels:
    kubernetes.io/metadata.name: clustersecret
